# handfree

./: .env.example  .gitattributes  =6.92.0  AGENT_LOOP_USAGE.md  Future_plans.md  QUICK_REFERENCE.md  README.md  context-for-future-work.md  handfree.sh  main.py  output_handler.py  prompt.md  pyproject.toml  requirements.txt  run_agent_loop.sh  test_output_handler.py
.claude/: CLAUDE.md
.github/workflows/: test.yml
.hypothesis/constants/: 176aeee2c63eeb55  189e38dceb289559  1a1557144b6f91db  23e0928a81d06439  2576772611f1cd4d  27ca93fcd49d6eaa  2884567c95bcd5f4  309ba843ecc1f943  31bda876dbb57772  4175801cb3620b2d  5f667c8f17cd1ad4  649f3e30881f343a  68517d3ea59df5f6  7712926b6e638098  7f6d8b9351233839  7fe0b1479246174b  87247c09a97a85d0  8bd4bf9723d0f75b  8e72a0ce69e1cb29  9960a3a0b9f46003  9c8e34cff18aa896  9f503c0536eb1587  a4fc49a4f1a34d75  b4ad7e63449c4201  c6d6fe315824fd25  cd2a1f9eef124f90  d59d3f1f2468c5e4  d9c2e92f7ff2e1e2  de8a6907b430f3cb  e7ec83c9e940567a  ec694752c6e5c426  f6f49f307e686b36  f8ff54e97efe4c7a  ff15873d6897ba96
plan/: cross_platform_ui_plan.md  focus_preservation_fix_plan.md  implementation_plan.md  integration_testing_plan.md  text_cleanup_plan.md  ui_improvements_plan.md  whisper_cpp_plan.md
spec/: README.md  cross_platform_ui_spec.md  integration_testing_spec.md  subprocess_indicator_spec.md  ui_improvements_spec.md
src/context_aware_whisper/ui/: menubar.py
src/handfree/: __init__.py  audio_recorder.py  config.py  exceptions.py  hotkey_detector.py  local_llm.py  local_transcriber.py  mute_detector.py  output_handler.py  text_cleanup.py  transcriber.py
src/handfree/platform/: base.py
src/handfree/platform/linux/: output_handler.py
src/handfree/platform/macos/: hotkey_detector.py  output_handler.py
src/handfree/platform/windows/: output_handler.py
src/handfree/ui/: app.py  history.py  indicator.py  native_indicator.py  subprocess_indicator.py  subprocess_indicator_client.py
tests/: __init__.py  conftest.py  test_animated_indicator.py  test_animated_recording_indicator.py  test_audio_recorder.py  test_ci_workflow.py  test_config.py  test_dependencies.py  test_documentation.py  test_e2e.py  test_error_handling.py  test_focus_preservation.py  test_history_hotkey_change.py  test_history_store.py  test_indicator_state_logic.py  test_init.py  test_linux_output_handler.py  test_local_llm.py  test_local_transcriber.py  test_macos_hotkey_detector.py  test_mute_detector.py  test_output_handler.py  test_platform.py  test_subprocess_indicator.py  test_text_cleanup.py  test_text_cleanup_integration.py  test_transcriber.py  test_transcriber_integration.py  test_type_text_instant.py  test_ui.py  test_whisper_standalone.py  test_z_main.py
tests/fixtures/: audio_generator.py
tests/fixtures/audio/: manifest.json
tests/integration/: __init__.py  conftest.py  test_audio_fixtures_validation.py  test_audio_recorder_integration.py  test_e2e_flow_integration.py  test_local_transcriber_integration.py  test_output_handler_integration.py
